--- a/.github/workflows/deploy-functions.yml
+++ b/.github/workflows/deploy-functions.yml
@@ -32,7 +32,7 @@ jobs:
           python-version: "3.12"
 
       - name: Install dependencies into .python_packages
-        working-directory: ${{ secrets.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+        working-directory: functions/estimate-api
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt --target=".python_packages/lib/site-packages"
@@ -41,4 +41,4 @@ jobs:
         uses: Azure/functions-action@v1
         with:
           app-name: ${{ secrets.AZURE_FUNCTIONAPP_NAME }}
-          package: ${{ secrets.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+          package: functions/estimate-api
