--- a/.github/workflows/deploy-functions.yml
+++ b/.github/workflows/deploy-functions.yml
@@ -37,8 +37,16 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt --target=".python_packages/lib/site-packages"
 
+      - name: Build deployment zip
+        run: |
+          rm -f functionapp.zip
+          cd functions/estimate-api
+          zip -r ../../functionapp.zip .
+          cd ../..
+          unzip -l functionapp.zip | head -n 40
+
       - name: Deploy to Azure Functions
         uses: Azure/functions-action@v1
         with:
           app-name: ${{ secrets.AZURE_FUNCTIONAPP_NAME }}
-          package: functions/estimate-api
+          package: functionapp.zip
